--- a/AddressBookPL/Views/Account/Login.cshtml
+++ b/AddressBookPL/Views/Account/Login.cshtml
@@ -5,21 +5,42 @@
 
 <div class="row">
     <div class="col-md-6 offset-3 offset-3">
+        @if (TempData["RegisterSuccessMsg"] != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <i class="bi bi-check-circle-fill"></i>
+                @TempData["RegisterSuccessMsg"]
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+
+        @if (TempData["RegisterWarningMsg"] != null)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <i class="bi bi-check-circle-fill"></i>
+                @TempData["RegisterWarningMsg"]
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+
         <h5>Giriş EKranı</h5>
 
-        <div class="form-group">
-            <label>Kullanıcı Adı veya Email</label>
-            <input type="text" class="form-control" asp-for="UsernameorEmail" />
-        </div>
+        <form asp-action="Login" asp-controller="Account" method="post">
+            <div class="text-danger" asp-validation-summary="All"></div>
+            <div class="form-group">
+                <label>Kullanıcı Adı veya Email</label>
+                <input type="text" class="form-control" asp-for="UsernameorEmail" />
+            </div>
 
-        <div class="form-group">
-            <label>Şifre</label>
-            <input type="text" class="form-control" asp-for="Password"/>
-        </div>
+            <div class="form-group">
+                <label>Şifre</label>
+                <input type="password" class="form-control" asp-for="Password" />
+            </div>
 
-        <div class="form-group">
-            <button type="submit" class="btn btn-info">GİRİŞ YAP</button>
-        </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-info">GİRİŞ YAP</button>
+            </div>
+        </form>
     </div>
 </div>
 
