--- a/AddressBookPL/Views/Home/Index.cshtml
+++ b/AddressBookPL/Views/Home/Index.cshtml
@@ -11,8 +11,8 @@
 
 <div class="row">
     <div class="col-md-4">
-        <button type="button" class="btn btn-lg btn-info" asp-controller="Home" asp-action="AddAddress">
+        <a type="button" class="btn btn-lg btn-info" asp-controller="Home" asp-action="AddAddress">
             ADRES EKLE
-        </button>
+        </a>
     </div>
 </div>
