--- a/AddressBookPL/Views/Home/AddAddress.cshtml
+++ b/AddressBookPL/Views/Home/AddAddress.cshtml
@@ -272,6 +272,34 @@
             }); // btnSave bitti
 
 
+            $("#neighbourhoodSelect").change(function () {
+                var cityid = $("#cityselect").val();
+                var districtid = $("#districtSelect").val();
+                var neighbourhoodid = $("#neighbourhoodSelect").val();
+                $("#postalcode").val('');
+                if (neighbourhoodid > 0) {
+                    $.ajax({
+                        type: "get",
+                        url: "/Home/GetNeighbourhoodPostalCode?cityid=" + cityid
+                            + "&districtid=" + districtid + "&neighbourid=" + neighbourhoodid,
+                        success: function (res) {
+                            if (res.issuccess) {
+                                var postalcode = res.data;
+                                $("#postalcode").val(postalcode);
+                            }
+                            else {
+                                alert(res.msg);
+                            }
+                        }, // success funk. bitti
+                        error: function (res) {
+                            alert(res.msg);
+                        } // error bitti
+                    }); // ajax bitti
+                } // if bitti
+
+            }); // neighbourhood select bitti
+
+
         }); // document ready bitti
 
 
